rename wd_s -> _s and update description

--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
-  "name": "wd_s",
-  "description": "A project boilerplate for WebDevStudios.",
+  "name": "_s",
+  "description": "A theme boilerplate for WebDevStudios.",
   "version": "1.0.0",
   "keywords": [
     "css",
