Update project to utilize grunt-sass for quicker builds

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "_s",
+  "name": "codename-eli",
   "version": "1.0.0",
-  "description": "A theme boilerplate for WebDevStudios.",
+  "description": "A starter theme based on _s",
   "author": "WebDevStudios",
-  "homepage": "https://github.com/WebDevStudios/_s",
+  "homepage": "http://webdevstudios.com",
   "bugs": "https://github.com/WebDevStudios/_s/issues",
   "repository": {
     "type": "git",
@@ -28,13 +28,13 @@
     "grunt-contrib-cssmin": "latest",
     "grunt-contrib-imagemin": "latest",
     "grunt-contrib-jshint": "latest",
-    "grunt-contrib-sass": "latest",
     "grunt-contrib-uglify": "latest",
     "grunt-contrib-watch": "latest",
     "grunt-csscomb": "latest",
     "grunt-githooks": "latest",
     "grunt-newer": "latest",
     "grunt-phpcs": "latest",
+    "grunt-sass": "latest",
     "grunt-sassdoc": "latest",
     "grunt-shell": "latest",
     "grunt-spritesmith": "latest",
