--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "codename-eli",
+  "name": "_s",
   "version": "1.0.0",
   "description": "A starter theme based on _s",
   "author": "WebDevStudios",
